--- a/analysis/baseline_analysis_per_gram.ipynb
+++ b/analysis/baseline_analysis_per_gram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,39 +75,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'results/deep_nutr_vlp/base/food_test_recipe_img.json'\n",
+    "path = 'results_50/deep_ht/direct_ingrs_3_branches/no_nutr/food_test_recipe_only.json'\n",
     "with open(path) as f:\n",
     "    im2recipe_dict = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energy: MAE = 67.30, MAPE = 0.44, SE = 100.39\n",
-      "fat: MAE = 6.30, MAPE = 1.78, SE = 7.14\n",
-      "carb: MAE = 8.32, MAPE = 0.81, SE = 15.99\n",
-      "protein: MAE = 2.67, MAPE = 0.74, SE = 3.84\n",
-      "0.94\n",
-      "energy: MAE = 56.73, MAPE = 0.38, SE = 100.39\n",
-      "fat: MAE = 5.29, MAPE = 1.63, SE = 7.14\n",
-      "carb: MAE = 7.24, MAPE = 0.77, SE = 15.99\n",
-      "protein: MAE = 2.30, MAPE = 0.66, SE = 3.84\n",
-      "0.86\n",
-      "energy: MAE = 55.72, MAPE = 0.38, SE = 100.39\n",
-      "fat: MAE = 5.14, MAPE = 1.70, SE = 7.14\n",
-      "carb: MAE = 7.15, MAPE = 0.77, SE = 15.99\n",
-      "protein: MAE = 2.25, MAPE = 0.66, SE = 3.84\n",
-      "0.88\n"
+      "energy: MAE = 67.34, MAPE = 0.45, SE = 100.39\n",
+      "fat: MAE = 6.22, MAPE = 1.63, SE = 7.14\n",
+      "carb: MAE = 8.32, MAPE = 0.78, SE = 15.99\n",
+      "protein: MAE = 2.59, MAPE = 0.70, SE = 3.84\n",
+      "0.89\n",
+      "energy: MAE = 56.08, MAPE = 0.39, SE = 100.39\n",
+      "fat: MAE = 5.19, MAPE = 1.65, SE = 7.14\n",
+      "carb: MAE = 7.17, MAPE = 0.80, SE = 15.99\n",
+      "protein: MAE = 2.24, MAPE = 0.64, SE = 3.84\n",
+      "0.87\n",
+      "energy: MAE = 55.19, MAPE = 0.39, SE = 100.39\n",
+      "fat: MAE = 5.09, MAPE = 1.77, SE = 7.14\n",
+      "carb: MAE = 7.12, MAPE = 0.82, SE = 15.99\n",
+      "protein: MAE = 2.21, MAPE = 0.64, SE = 3.84\n",
+      "0.90\n"
      ]
     }
    ],
@@ -145,6 +145,25 @@
     "    print(f'{nutr_name}: MAE = {mae:.02f}, MAPE = {mape:.02f}, SE = {se:.02f}')\n",
     "    all_mape.append(mape)\n",
     "print(f'{sum(all_mape)/4:.02f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in range(50):\n",
+    "    gts, preds, absolute_errors, percentage_errors = pred_nutr(1)\n",
+    "    all_mape = []\n",
+    "    for nutr_name in gts.keys():\n",
+    "        mae = sum(absolute_errors[nutr_name])/len(absolute_errors[nutr_name])\n",
+    "        mape = sum(percentage_errors[nutr_name])/len(percentage_errors[nutr_name])\n",
+    "        m = np.array(gts[nutr_name]).mean()\n",
+    "        se = sum(np.abs(np.array(gts[nutr_name]) - m))/(len(gts[nutr_name]))\n",
+    "        print(f'{nutr_name}: MAE = {mae:.02f}, MAPE = {mape:.02f}, SE = {se:.02f}')\n",
+    "        all_mape.append(mape)\n",
+    "    print(f'{sum(all_mape)/4:.02f}')"
    ]
   },
   {
